fix(album, photo): 명세 불일치 필드 수정 및 앨범 생성 시 photoIds 반영 오류 해결
- CreateAlbumRequest.photoIdList → photoIds로 필드명 변경 (명세 맞춤)
- PhotoIdListRequest.photoIdList → photoIds로 필드명 변경
- UpdateSharePermissionRequest / AlbumShareRequest 레코드 메서드명 실제 필드명과 맞도록 수정
- AlbumService.createAlbum()에서 photoIds가 반영되지 않던 버그 수정
- autoSetThumbnailIfMissing 이후 coverPhotoId 지정 시 반영 가능하도록 구조 개선
- AlbumService.getAlbums() 내부 mutable list로 변환하여 UnsupportedOperationException 해결
- AlbumOwnershipFilter enum switch 문 정상 동작하도록 타입 정리
- PhotoResponseDto에서 제거된 locationName getter 완전 제거하며 PhotoController 전체 매핑 정상화
- album/shared API 제거 후 /api/albums?ownership=SHARED 로 통합
- 전체 Album DTO 들 명세와 동일한 필드/타입으로 동기화